# github-actions-demo

./: README.md  pyproject.toml
.github/workflows/: check-lint-format.yml  test.yml
src/github_actions_demo/: birthday.py
tests/: test_github_actions_demo.py
